05 March 2008 - Added chss (attila.fulop@coimbra-grp.com)
05 March 2008 - Added mbc (tomas.ruden@softwell.se)
23 April 2008 - Added zenoss (dev@zenoss.com)
23 April 2008 - Added nerds (bcheese@netspeed.com.au),
23 April 2008 - Added opal (support@leicon.it)
23 April 2008 - Added gsrunprocessormanager (jesse.keller@roche.com)
23 April 2008 - Added allris (support@cc-egov.de)
15 April 2010 - Added vmlvtl, vmlvsm, vmlvsa, vmlcos for VM Labs LLC (paul.perkins@vm-labs.com)
                (xfer from Google docs entry of 1/6/2010)
15 April 2010 - Added dcfs for Ingenieurbüro Dr. Utcke (sven.utcke@dr-utcke.de)
                (xfer from Google docs entry of 3/3/2010)
04 May 2010 - Added fuse for Vladimir Kolpakov (vova@cpan.org)
29 May 2010 - Added rob for Roberto Taglioretti (roberto.taglioretti@leicon.it)
05 Nov 2010 - Added puppet, puppetmaster for Garrett Honeycutt (garrett@puppetlabs.com)
              First inclusion of "Purpose, Website" for init scripts, modified 
              generation script to accomodate and tweak layout
19 Nov 2010 - Added iaxmodem for Michael Kromer (michael.kromer@millenux.com)
05 Jan 2011 - Added membase for Matt Ingenthron (matt@membase.com)
19 Jan 2011 - Added is for Uwe Richter (uwe.richter@uni-jena.de)
18 Mar 2011 - Added solserver for Matthew Hardin (mhardin@symas.com)
31 May 2011 - restore tvpvrd lost @kernel.org
31 May 2011 - Add shibd for Peter Schober
01 Jun 2011 - Add raptoricad, raptormuad, raptorwebd for Rhys Smith (smith@cardiff.ac.uk)
11 Aug 2011 - Change contact email for Netezza
22 Jun 2012 - Add init scripts for Openstack
05 Sep 2012 - Add bcfg2, bcfg2-server for Christopher Holm (them4z@gmail.com)
25 Sep 2012 - Add arangodb for Frank Celler  (f.celler@triagens.de)
12 Dec 2012 - Add ddrtd for Geoff Bain (geoff.bain@netapp.com)
18 Dec 2012 - Add ybfs, yottabyte for Paul Hodges IV (p4@yottabyte.com)
30 Apr 2013 - Add dfshwagent for Pieter Hollants (pieter.hollants@dfs.de)
22 Nov 2013 - Added versatushpc and cscored