@@ -216,7 +216,7 @@ cron                                     Reserved for LSB-Compliant Distribution
 crond                                    Reserved for LSB-Compliant Distributions                lsb@lanana.org
                                                                                                  
 crossfire-server                         Reserved for LSB-Compliant Distributions                lsb@lanana.org
-
+                                                                                                 
 cscored                                  Motorola Solutions, Inc. Linux SDK for Scanners         tom.fitzgerald@motorolasolutions.com
                                                                                                  
 cst                                      CST GmbH                                                thimo.neubauer@cst.com
@@ -1266,7 +1266,7 @@ userv                                    Reserved for LSB-Compliant Distribution
 vchkpw                                   Reserved for LSB-Compliant Distributions                lsb@lanana.org
                                                                                                  
 vdr                                      SUSE LINUX Products GmbH                                ludwig.nussel@suse.de
-
+                                                                                                 
 versatushpc                              VersatusHPC ltda.                                       fabricio@versatushpc.com.br
                                                                                                  
 vje-delta                                Reserved for LSB-Compliant Distributions                lsb@lanana.org
@@ -1310,6 +1310,8 @@ webmin                                   Caldera Systems Inc. dba The SCO Group 
 welcome2l                                Reserved for LSB-Compliant Distributions                lsb@lanana.org
                                                                                                  
 whereami                                 Reserved for LSB-Compliant Distributions                lsb@lanana.org
+                                                                                                 
+wikvaya                                  HERE Wikvaya                                            Alexander.Weber@here.com
                                                                                                  
 winbind                                  Reserved for LSB-Compliant Distributions                lsb@lanana.org
                                                                                                  
