@@ -34,7 +34,7 @@ names as described in the <b>Software Installation</b> and <b>System Initializat
 The LSB provider name assigned by LANANA must only consist of the ASCII characters [a-z0-9].
 
 <UL>
-<LI><A HREF="providers.txt">Current LSB Provider Name List</A> 22 Nov 2013
+<LI><A HREF="providers.txt">Current LSB Provider Name List</A> 27 Jan 2014
 <A HREF="CHANGELOG">CHANGELOG</A>
 </UL>
 
@@ -56,7 +56,7 @@ This web page is hosted by <A HREF="http://www.kernel.org/"><font color="#FFFFFF
 </td>
 <td align=right width="33%">
 <FONT SIZE=-1 color="#FFFFFF">
-Last Modified: 22 Nov 2013
+Last Modified: 27 Jan 2014
 </FONT>
 </td>
 <tr>
