@@ -81,3 +81,4 @@
 16 Aug 2012 - Added lsb-fws
 16 Aug 2012 - Changed email for lsb-fws
 22 Nov 2013 - Added lsb-motorola and lsb-versatushpc 
+27 Jan 2014 - Added lsb-here-wikvaya and lsb-motorola-scanner
