@@ -138,3 +138,4 @@
 28 Aug 2013 - Added 'centos' and 'km'
 16 Sep 2013 - Added 'exim' and 'seal'
 22 Nov 2013 - Added 'motorola', 'versatushpc', bb', and 'getup'
+27 Jan 2014 - Added 'adva', 'altera', 'here', 'netvisor', 'ros', and 'rubies'
