@@ -146,3 +146,4 @@ susefirewall2_final, dvb, vdr, resmgt (ludwig.nussel@suse.de)
 18 Dec 2012 - Add ybfs, yottabyte for Paul Hodges IV (p4@yottabyte.com)
 30 Apr 2013 - Add dfshwagent for Pieter Hollants (pieter.hollants@dfs.de)
 22 Nov 2013 - Added versatushpc and cscored
+27 Jan 2014 - Added wikvaya
